--- a/angular.json
+++ b/angular.json
@@ -125,6 +125,9 @@
               "devServerTarget": "whatsapp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
